# ogmp-svn

librtime/: AUTHORS  HELPWANT  Makefile.am  Makefile.mingw  Makefile.posix  Makefile.vc6  configure.in
librtime/branches/milestone_1/: Makefile.posix  Makefile.solaris
librtime/branches/milestone_1/librtime/: subtitle.srt  t_time.c  timer.h  timer_win32.c  xmain.c
librtime/branches/milestone_1/mingw/: librtime.def  xmake-win32.sh
librtime/librtime/: Makefile.am  spu_text.c  spu_text.h  t_time.c  timer.h  timer_posix.c  timer_win32.c  xthread.h  xthread_sdl.c
librtime/mingw/: xmake-mingw.sh
libtmdbase/: AUTHORS  Makefile.am  Makefile.posix  autogen.sh  configure.in
libtmdbase/branches/milestone_1/: Makefile.posix
libtmdbase/branches/milestone_1/libtmdbase/: buffer.h  catalog.h  config.h  inet.h  io.h  list.c  loader.c  md5.h  spinqueue.c  ui.h  utf8.h  xmalloc.c  xmalloc.h  xmap.c  xstring.c
libtmdbase/branches/milestone_1/libtmdbase/libsdl/: Makefile  Makefile.am
libtmdbase/branches/milestone_1/libtmdbase/win32/: readdir.c
libtmdbase/libtmdbase/: Makefile.am  buffer.c  buffer.h  catalog.c  catalog.h  config.c  config.h  inet.h  list.c  list.h  loader.c  loader.h  os.h  socket.h  socket_posix.c  spinqueue.c  spinqueue.h  t_list.c  timer.h  ui_stub.c  util.h  xmalloc.c  xmalloc.h  xmap.c  xmap.h  xstring.c  xstring.h  xthread.h  xthread_sdl.c
libtmdbase/libtmdbase/.deps/: buffer.P  catalog.P  config.P  list.P  loader.P  md5.P  spinqueue.P  t_list.P  utf8.P  xmap.P  xstring.P
libtmdbase/libtmdbase/libsdl/: Makefile  Makefile.am  Makefile.in  xthread_sdl.c
libtmdbase/libtmdbase/memwatch/: Makefile.am  test.c
libtmdbase/libtmdbase/posix/: Makefile.am  timer.c
libtmdbase/libtmdbase/utils/: Makefile.am
libtmdbase/libtmdbase/win32/: dirent.h  dlfcn.c  dlfcn.h  inet.c  inet.h  readdir.c
libtmdbase/misc/: Makefile.am  timedia-config.in
libxrtp/: AUTHORS  Makefile.am  Makefile.posix  configure.in
libxrtp/branches/milestone_1/libxrtp/: connect.h  const.h  interface.h  internal.h  media.c  media.h  packet.c  packet.h  pipeline.c  portman.c  psched.h  psched_simple.c  session.c  xrtp.h
libxrtp/branches/milestone_1/libxrtp/plugins/: plug_dummy.h  plug_loop.c  plug_test1.c
libxrtp/branches/milestone_1/libxrtp/tester/: sipua.c  spu_recvr.c  spu_sender.c  spu_text.c  spu_text.h  t_pipeline.c
libxrtp/libxrtp/: Makefile.am  connect.c  connect.h  handler.h  internal.h  media.c  media.h  packet.c  packet.h  packet_const.h  pipeline.c  pipeline.h  portman.c  portman.h  portman_posix.c  psched.c  psched.h  psched_simple.c  session.c  session.h  type.h  udp.c  xrtp.c  xrtp.h
libxrtp/libxrtp/plugins/: plug_dummy.c  plug_serializer.c  plug_test2.c  plug_test3.c  plug_text.c
libxrtp/libxrtp/tester/: sipua.c  sipua.h  spu_recvr.c  spu_sender.c  spu_text.c  spu_text.h  t_packet.c  t_session.c  t_session.h  t_udp.c
libxrtp/misc/: Makefile.am  xrtp-config.in
ogmp/: AUTHORS  BUGS  Changelog  Makefile.am  configure.in
ogmp/branches/milestone_1/: README  TODO
ogmp/branches/milestone_1/ogmp/cursesui/: Makefile.posix  editor.c  (+20 more)
ogmp/include/: Makefile.am  dev_rtp.h  media_format.h  ogmp.h  phonebook.h  rtp_cap.h  rtp_format.h  sipua.h
ogmp/libogmp/: Makefile.am  media_control.c  ogmp_client.c  ogmp_ui.c  phonebook.c  sipua.c
ogmp/misc/: Makefile.am  ogmp-config.in
ogmp/ogmp/: Makefile.am  Makefile.posix  fifo.h  log.h  media_control.c  media_format.h  ogmp.c  ogmp.h  ogmp_client.c  ogmp_config.c  ogmp_server.c  ogmp_source.c  ogmp_transmit.c  phonebook.c  phonebook.h  rtp_cap.c  rtp_cap.h  sipua.c  sipua.h
ogmp/ogmp/cursesui/: Makefile.am  Makefile.posix  editor.c  editor.h  gui.c  gui.h  gui_address_book_browse.c  gui_address_book_browse.h  gui_address_book_newentry.c  gui_address_book_newentry.h  gui_audio_test.c  gui_icon.c  gui_icon.h  gui_insubscriptions_list.c  gui_insubscriptions_list.h  gui_login.c  gui_loglines.c  gui_loglines.h  gui_menu.c  gui_menu.h  gui_message.c  gui_new_call.c  gui_new_call.h  gui_new_identity.c  gui_new_identity.h  gui_new_user.c  gui_new_user.h  gui_online.c  gui_online.h  gui_preference.c  gui_preference.h  gui_profiles.c  gui_registrations_list.c  gui_registrations_list.h  gui_sessions_list.c  gui_sessions_list.h  gui_setup.c  gui_setup.h  gui_subscriptions_list.c  gui_subscriptions_list.h  (+2 more)
ogmp/ogmp/devices/: Makefile.am  Makefile.posix  alsa_pipe.c  dev_alsa.c  dev_alsa.h  dev_ao.h  dev_portaudio.c  dev_portaudio.h  dev_rtp.c  dev_rtp.h  patest_record.c  timed_pipe.c  timed_pipe.h
ogmp/ogmp/eXosipua/: Makefile.am  Makefile.posix  eXosip2.h  eXosipua.c  eXosipua.h  eXutils.c  eXutils.h  jauth.c  jcalls.c  jsubscriptions.h
ogmp/ogmp/eXosipua2/: Makefile.am  eXosipua.c  eXosipua.h  jauth.c  jcalls.c
ogmp/ogmp/format_ogm/: Makefile.am  Makefile.posix  ogm_audio.c  ogm_common.c  ogm_dshow.c  ogm_format.c  ogm_format.h  ogm_text.c  ogm_video.c
ogmp/ogmp/format_rtp/: Makefile.am  Makefile.posix  rtp_format.c  rtp_format.h
ogmp/ogmp/include/: media_format.h  ogmp.h  phonebook.h  rtp_cap.h  sipua.h
ogmp/ogmp/libogmp/: Makefile.posix  fifo.c  media_control.c  ogmp_client.c  ogmp_config.c  ogmp_source.c  ogmp_ui.c  phonebook.c  rtp_cap.c  sipua.c
ogmp/ogmp/npapi/: ClassID.txt  FIXME  Makefile  Makefile.posix  config.h  nsIScriptableOgmpPlugin.idl  nsScriptablePeer.cpp  nsScriptablePeer.h  plugin-setup.cpp  plugin-setup.h  plugin.cpp  plugin.h  test.html
ogmp/ogmp/npapi/common/: npmac.cpp  npunix.c
ogmp/ogmp/npapi/extras/: memmem.c  strlcat.c  strlcpy.c
ogmp/ogmp/ogmp/: Makefile.am  Makefile.posix  ogmp_client.c  ogmp_main.c
ogmp/ogmp/speex/: Makefile.am  Makefile.posix  ogm_speex.c  speex_codec.c  speex_codec.h  speex_config.c  speex_creater.c  speex_info.h  speex_maker.c  speex_player.c  speex_rtp.c  speex_sdp.c  speex_sender.c
ogmp/ogmp/ui_dummy/: Makefile.am  Makefile.posix  ui_dummy.c
ogmp/ogmp/vorbis/: Makefile.posix  ogm_vorbis.c  vorbis_decoder.c  vorbis_decoder.h  vorbis_info.h  vorbis_player.c  vorbis_rtp.c  vorbis_sender.c
ogmp/patches/: PDCurses_eXosip.patch
ogmp/win32/: Makefile.msvc
(+40 files in other folders)
